# FacebookADLibrary

./: .gitignore  LICENSE  README.md  generate_mock.py  pyproject.toml
.github/workflows/: static.yml  test-ubuntu-20.04.yml  test-ubuntu-latest.yml  test.yml
documentation/source/: api_reference.rst  conf.py  faq.rst  index.rst  installation.rst  introduction.rst  usage.rst
facebook_ad_library/: __init__.py  client.py  config.py  exceptions.py
facebook_ad_library/fields/: __init__.py  ad_creation_time.py  ad_creative_bodies.py  ad_creative_link_captions.py  ad_creative_link_descriptions.py  ad_creative_link_titles.py  ad_delivery_start_time.py  ad_delivery_stop_time.py  ad_snapshot_url.py  age_country_gender_reach_breakdown.py  base.py  beneficiary_payers.py  bylines.py  currency.py  delivery_by_region.py  demographic_distribution.py  estimated_audience_size.py  eu_total_reach.py  impressions.py  languages.py  library_id.py  page_id.py  page_name.py  publisher_platforms.py  spend.py  target_ages.py  target_gender.py  target_locations.py
facebook_ad_library/types/: __init__.py  ad_active_status.py  ad_array.py  ad_bool.py  ad_date_type.py  ad_delivery_date_max.py  ad_delivery_date_min.py  ad_int.py  ad_library_type.py  ad_reached_countries.py  ad_str.py  ad_type.py  audience_distribution.py  bylines.py  delivery_by_region.py  estimated_audience_size_max.py  estimated_audience_size_min.py  insights_range_value.py  languages.py  media_type.py  publisher_platform.py  search_page_ids.py  search_terms.py  search_type.py  target_location.py  unmask_removed_content.py
mock/: basic-search.json  empty-search.json  fields-search.json
test/: test_client.py
