[build-system]
requires = ["setuptools", "wheel", "requests"]
build-backend = "setuptools.build_meta"

[tool.build-system]
package = "facebook_ad_library"

[project]
name = "facebook_ad_library"
authors = [
    {name = "Henrique da Silva Santos", email = "rique_dev@hotmail.com"},
]
requires-python = ">=3.5"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dynamic = ["version", "description"]

[project.urls]
Documentation = "https://flit.pypa.io"
Source = "https://github.com/pypa/flit"

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]
doc = ["sphinx"]