[build-system]
requires = ["setuptools", "wheel", "requests"]
build-backend = "setuptools.build_meta"

[tool.build-system]
package = "facebook_ad_library"

[project]
name = "facebook_ad_library"
authors = [
    {name = "Henrique da Silva Santos", email = "rique_dev@hotmail.com"}
]
description = "A Python SDK for accessing Facebook's Ad Library, providing comprehensive insights into advertisements across Facebook's network of platforms."
requires-python = ">=3.5"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://riquedev.github.io/FacebookADLibrary/"
Source = "https://github.com/riquedev/FacebookADLibrary/"

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov"
]
doc = ["sphinx"]

[tool.setuptools.dynamic]
version = {attr = "facebook_ad_library.VERSION"}
readme = {file = ["README.md"]}